--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-	<title>ASE_TEST</title>
-	<meta charset="utf-8">
-	<script src="test.js"></script>
 	<link rel="stylesheet" type="text/css" href="./test.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="http://d3js.org/d3.v3.js"></script>
 </head>
 
 <body>
-	<div>Test<div>
+	<div class="scene"></div>
+	
+	<script src="./data.js"></script>
+	<script src="./test.js"></script>
+
 </body>
 
 </html>
